:card_file_box: 애플리케이션 실행 시 DB 초기화

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=erp-attendance-sync
+
+# JPA(??????)? ?????? ?? ? ???? ?? DDL(??? ???)? ???? ???? ?
+# create-drop: ?? ? ??? ??, ?? ? ??? ?? (???? DB ???? ??)
+spring.jpa.hibernate.ddl-auto=create-drop
+
+# ?????? ???(data.sql ??)? JPA? DDL ?? ??? ???? (?? ??!)
+spring.jpa.defer-datasource-initialization=true
